--- a/template/components/register.html
+++ b/template/components/register.html
@@ -28,7 +28,7 @@
         <div class="box">
             <div class="log_in_page">
                 <div class="logo">
-                    <h1>MediAid</h1>
+                    <h1>HealCraft</h1>
                 </div>
                 <div class="description">
                     <h2>Register Now</h2>
