--- a/template/components/login.html
+++ b/template/components/login.html
@@ -29,7 +29,7 @@
             <div class="log_in_page">
                 
                 <div class="logo">
-                    <h1>MediAid</h1>
+                    <h1>HealCraft</h1>
                 </div>
                 <div class="description">
                     <h2>Hi,Welcome Back</h2>
